cluster/apps/default/external-services/gitea/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app gitea
  namespace: default
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: tonibrix
  ports:
    - name: webui
      port: 8687
      protocol: TCP
      targetPort: 8687
