cluster/apps/default/external-services/gitea/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name gitea
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitea.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: default
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 8687
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
